Fix biz_info spacing at /menu/view

--- a/www/public/css/menu/menu.view.less
+++ b/www/public/css/menu/menu.view.less
@@ -53,7 +53,7 @@ div.biz_info {
     table {
         width: 100%;
     }
-    td {
+    td.spacer {
         padding-bottom: 0.8em;
     }
     .row {
